--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <p><strong><span data-custom-class="heading_1">AGREEMENT TO OUR LEGAL TERMS</span></strong></p>
 <p>&nbsp;</p>
 <p data-custom-class="body_text">We are Pavel Maximenko, software engeneer presenting <span style="text-decoration: underline; color: #800080;">CrafterSoft</span> company&nbsp;("<strong>Company</strong>," "<strong>we</strong>," "<strong>us</strong>," "<strong>our</strong>"), a company registered in Belarus,&nbsp;Minsk<span data-custom-class="body_text"> 220047</span>.</p>
-<p>&nbsp;</p>
 <p data-custom-class="body_text">We operate the mobile application <span style="text-decoration: underline;"><span style="color: #800080; text-decoration: underline;">CryptumX</span></span> app&nbsp;(the "<strong>App</strong>"), as well as any other related products and services that refer or link to these legal terms (the "<strong>Legal Terms</strong>") (collectively, the "<strong>Services</strong>") with promotional text:<br />&nbsp;</p>
-<p data-custom-class="body_text"><em>Your One-Stop Crypto Hub: Explore 200+ Coins, Manage Your Portfolio, Convert Crypto, Plan Market Strategies, and Stay Updated with the Latest News!</em></p>
 <p>&nbsp;</p>
 <p data-custom-class="body_text">You can contact us by email at <a href="mailto:craftersort@gmail.com">craftersort@gmail.com</a><br /><br /></p>
-<p data-custom-class="body_text">These Legal Terms constitute a legally binding agreement made between you, whether personally or on behalf of an entity ("<strong>you</strong>"), and our company, concerning your access to and use of the services. You agree that by accessing the services, you have read, understood, and agreed to be bound by all of these Legal Terms. IF YOU DO NOT AGREE WITH ALL OF THESE LEGAL TERMS, THEN YOU ARE EXPRESSLY PROHIBITED FROM USING THE SERVICES AND YOU MUST DISCONTINUE USE IMMEDIATELY.</p>
+<p data-custom-class="body_text">These Legal Terms constitute a legally binding agreement made between you, whether personally or on behalf of an entity ("<strong>you</strong>"), and our company, concerning your access to and use of the services.</p>
+<p data-custom-class="body_text">You agree that by accessing the services, you have read, understood, and agreed to be bound by all of these Legal Terms.</p>
+<p data-custom-class="body_text">IF YOU DO NOT AGREE WITH ALL OF THESE LEGAL TERMS, THEN YOU ARE EXPRESSLY PROHIBITED FROM USING THE SERVICES AND YOU MUST DISCONTINUE USE IMMEDIATELY.</p>
 <p>All users will be notified of the change in terms and conditions in the new version of the release application.</p>
 <p>The services are intended for users who are at least 18 years old. Persons under the age of 18 are not permitted to use or register for the services.</p>
 <p>We recommend that you print a copy of these Legal Terms for your records.</p>
