--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 <li id="ip" data-custom-class="heading_1"><strong> INTELLECTUAL PROPERTY RIGHTS</strong></li>
 </ol>
 <p><strong>Our intellectual property</strong></p>
-<p>&nbsp;</p>
-<p>We are the rightful owner or licensee of all intellectual property rights in our&nbsp;<strong>Services</strong>, encompassing source code, databases, functionality, software, website designs, audio, video, text, photographs, and graphics within the&nbsp;<strong>Services</strong> (collectively referred to as the "<strong>Content</strong>"), as well as the trademarks, service marks, and logos embedded therein (the "<strong>Marks</strong>").</p>
+<p>We are the rightful owner or licensee of all intellectual property rights in our&nbsp;<strong>Services</strong>, encompassing source code, databases, functionality, software, text, photographs, and graphics within the&nbsp;<strong>Services</strong> (collectively referred to as the "<strong>Content</strong>"), as well as the trademarks, service marks, and logos embedded therein (the "<strong>Marks</strong>").</p>
+<p>The logos in the "INFO" section describe the data providers (<strong>CoinGecko</strong> and <strong>CCData</strong>). They belong to these providers and are required to be displayed.</p>
 <p>Our Content and Marks enjoy protection under copyright and trademark laws, along with various other intellectual property rights and unfair competition laws, both in the United States and globally.</p>
 <p>The&nbsp;<strong>Content</strong> and&nbsp;<strong>Marks</strong> are provided through the&nbsp;<strong>Services</strong> "AS IS," intended solely for your personal, non-commercial use, or internal business purposes.</p>
 <p>&nbsp;<br /><strong>Your use of our Services</strong></p>
