--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <li><a href="#services"><span data-custom-class="link"> OUR SERVICES</span></a></li>
 <li><a href="#ip" data-custom-class="link"><span data-custom-class="body_text"> INTELLECTUAL PROPERTY RIGHTS</span></a></li>
 <li><a href="#userreps" data-custom-class="link"><span data-custom-class="body_text"> USER REPRESENTATIONS</span></a></li>
-<li><a href="#purchases" data-custom-class="link"><span data-custom-class="body_text"> PURCHASES AND PAYMENT</span></a></li>
+<li><a href="#purchases" data-custom-class="link"><span data-custom-class="body_text"> PURCHASES, SUBSCRIPTIONS, PAYMENT AND FEES</span></a></li>
 <li><a href="#prohibited" data-custom-class="link"><span data-custom-class="body_text"> PROHIBITED ACTIVITIES</span></a></li>
 <li><a href="#ugc" data-custom-class="link"><span data-custom-class="body_text"> USER GENERATED CONTRIBUTIONS</span></a></li>
 <li><a href="#reviews" data-custom-class="link"><span data-custom-class="body_text"> GUIDELINES FOR REVIEWS</span></a></li>
@@ -92,7 +92,7 @@
 <p>Our&nbsp;<strong>Service</strong>&nbsp;offer a free trial to new users who use <strong>our</strong> <strong>Service </strong>and choose monthly subscription (<span style="color: #ff9900;"><strong>PLUS - Monthly Plan</strong></span>) (&ldquo;<strong>Subscription</strong>&rdquo;).&nbsp;Your payment account will be charged according to your chosen <strong>Subscription</strong> at the end of the free trial.&nbsp;Otherwise, access to the provided data of <strong>our</strong> <strong>Service</strong> will be limited.</p>
 <p>At the end of each Billing Cycle (&ldquo;<strong>Billing Cycle</strong>&rdquo;), your&nbsp;<strong>Subscription</strong> will automatically renew under the exact same conditions unless you cancel it or we cancel it. You may cancel your <strong>Subscription</strong> at any time. A valid payment method is required to process the payment for your <strong>Subscription</strong>. Should automatic billing fail to occur for any reason, your <strong>Subscription</strong> will be terminated.</p>
 <p>At the end of each&nbsp;<strong>Billing Cycle</strong>,&nbsp;your&nbsp;<strong>Subscription</strong>&nbsp;has a "Billing Grace Period" lasting<label class="Box-sc-18eybku-0 Text__BaseText-sc-4nqr4q-0 Text-sc-4nqr4q-1 Form__BaseLabel-sc-xdycf6-0 kUVMXZ">&nbsp;</label>3 days.&nbsp;It lets you whose auto-renewal failed due to a payment issue continue accessing your app&rsquo;s paid content for a period of time while your payment account continues to attempt to collect payment.</p>
-<p><strong>Fees, Fee Changes</strong></p>
+<p><strong>Fees</strong></p>
 <p>In our sole discretion and at any time, we may modify the <strong>Subscription</strong> fees for any <strong>Subscription</strong>. Any Subscription fee change will become effective at the end of the then-current Billing Cycle.</p>
 <p>Your continued use of the <strong>Service</strong> after the <strong>Subscription</strong> fee change comes into effect constitutes your agreement to pay the modified <strong>Subscription</strong> fee amount.</p>
 <p>&nbsp;</p>
